# TrustworthyDolphin

./: Cargo.toml  README.md  rust-toolchain.toml  windows.Dockerfile
.cargo/: config.toml
assets/: bubble.ase  faith.ase  fish.ase  wave.ase
src/: assets.rs  main.rs  util.rs  window.rs
