[package]
name = "trustworthy-dolphin"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
benimator = "2.0.1"
bevy_ase = { git = "https://github.com/B-Reif/bevy_ase", rev = "2617888de6235a2dea754c5f377c1858fc14f8a4", features = ["benimator"] }
lazy_static = "1.4.0"
winit = "0.26.1"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_core = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_sprite = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }
bevy_asset = { git = "https://github.com/bevyengine/bevy", rev = "b0768a583db8ab10fac508cf8d78dec6b63b411d" }

[dependencies.bevy]
version = "0.6.0"
default-features = false
features = [
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "vorbis",
    "x11",
    "filesystem_watcher",
]

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.4.2"
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
default = ["bevy_dyn"]
bevy_dyn = ["bevy/dynamic"]
embed_assets = []

[profile.release]
debug = true
lto = true
strip = true
opt-level = 3